<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpeedRun"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_speedrun"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/majormonodisplayregular"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:boxBackgroundColor="#FFD987"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextGame"
                android:hint="@string/game"
                android:inputType="text"
                android:fontFamily="@font/majormonodisplayregular"
                android:layout_marginBottom="3sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:boxBackgroundColor="#FFD987"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextPlatform"
                android:hint="@string/platform"
                android:inputType="text"
                android:fontFamily="@font/majormonodisplayregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:boxBackgroundColor="#FFD987"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextTime"
                android:hint="@string/time"
                android:inputType="text"
                android:fontFamily="@font/majormonodisplayregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:boxBackgroundColor="#FFD987"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextDifficulty"
                android:hint="@string/difficulty"
                android:inputType="text"
                android:fontFamily="@font/majormonodisplayregular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:boxBackgroundColor="#FFD987"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EditTextLink"
                android:hint="@string/link"
                android:inputType="text"
                android:fontFamily="@font/majormonodisplayregular" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/cancel"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/ButtonCancel"
                app:cornerRadius="100dp"
                android:layout_marginEnd="11sp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFD987"
                android:text="@string/send"
                android:id="@+id/ButtonSendSpeedRun"
                android:textColor="@color/black"
                app:cornerRadius="100dp"
                android:fontFamily="monospace"
                 />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>