<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="#050505"
    android:orientation="vertical"
    android:gravity="center_horizontal|top">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/majormonodisplayregular"
        android:id="@+id/Language_TextView"
        android:layout_marginTop="10sp"
        />
    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="100sp">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/RadioGroupLanguages">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/RadioButtonEnglish"
                android:text="English"
                android:padding="8sp"
                android:checked="true"
                android:textColor="@color/white"
                android:buttonTint="@color/white"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/RadioButtonHungarian"
                android:text="Hungarian"
                android:padding="8sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"/>





        </RadioGroup>



    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"
        android:textSize="30sp"
        android:fontFamily="@font/majormonodisplayregular"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_notif"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:fontFamily="@font/majormonodisplayregular"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/majormonodisplayregular"

            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/news_games_notification_switch"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/majormonodisplayregular"

            />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_notif"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:fontFamily="@font/majormonodisplayregular"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/majormonodisplayregular"

            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/games_notification_switch"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/majormonodisplayregular"

            />

    </LinearLayout>




















    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:id="@+id/ButtonBack"
            />
    </LinearLayout>




</LinearLayout>